# COMP371GraphicsProject

./: .gitignore  README.md  old regex.txt
Project/: CMakeLists.txt
Project/Assets/Scenes/: AnimatedScene.scene  AnimatedSceneWithParticles.scene  CoordinateSystem.scene  CoordinateSystemlowpoly.scene  JustTrees.scene  LowLowPoly.scene  StaticScene.scene
Project/Assets/Shaders/: ChunkObject.fragmentshader  ChunkObject.vertexshader  PathLines.fragmentshader  PathLines.vertexshader  Skybox.fragmentshader  Skybox.vertexshader  SolidColor.fragmentshader  SolidColor.vertexshader  Texture.fragmentshader  Texture.vertexshader  Water.fragmentshader  Water.vertexshader
Project/Source/: Animation.cpp  Animation.h  BSpline.cpp  BSpline.h  BSplineCamera.cpp  BSplineCamera.h  Billboard.cpp  Billboard.h  Camera.cpp  Camera.h  ChunkObject.cpp  ChunkObject.h  ChunkObjectInstance.cpp  ChunkObjectInstance.h  ChunkPopulator.cpp  ChunkPopulator.h  CubeModel.cpp  CubeModel.h  EventManager.cpp  EventManager.h  FirstPersonCamera.cpp  FirstPersonCamera.h  LightSource.cpp  LightSource.h  Model.cpp  Model.h  ObjectModel.cpp  ObjectModel.h  ParsingHelper.h  ParticleDescriptor.cpp  ParticleDescriptor.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleSystem.cpp  ParticleSystem.h  PerlinNoise.cpp  PerlinNoise.h  Renderer.cpp  Renderer.h  Skybox.cpp  (+12 more)
Project/VS2013/: Assignment1.vcxproj  Assignment1.vcxproj.filters
Project/VS2017/: Assignment1.vcxproj  Assignment1.vcxproj.filters  LightSource.cpp  LightSource.h
Project/Xcode/COMP371_Framework.xcodeproj/: project.pbxproj
(+43 files in other folders)
